--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -12,7 +12,7 @@ jobs:
     name: Build and publish
     runs-on: ubuntu-latest
     env:
-      IMG_NAME: ghcr.io/taskforcesh/bullmq-proxy
+      IMG_NAME: ghcr.io/helpcrunch/bullmq-proxy
     steps:
       - name: Debug
         run: |
@@ -38,14 +38,18 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
+          
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
+          platforms: linux/amd64,linux/arm64
           push: true # push to registry
           pull: true # always fetch the latest base images
 
